# cuda-playground

./: README.md  gpt2.py  main.cpp  main.cu  playground.ipynb  pyproject.toml  setup.py
