[project]
name = "cuda-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "setuptools>=75.6.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.47.0",
]

[project.optional-dependencies]
build = ["setuptools"]
